--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Welcome to the Real World Assignment</h1>
+    <h1>Home - Real World Assignment</h1>
     <p>
         Discover the essentials of web development and design. Start your journey with this practical assignment.
     </p>
