Multipage Website CSS updated Version

--- a/categories.html
+++ b/categories.html
@@ -9,13 +9,17 @@
 </head>
 
 <body>
+    <div class="categories-section" id="section1">
     <h1 class="categories-title" id="main-title">Explore Our Categories</h1>
+    <div class="section" id="section2">
     <ul class="categories-sections">
         <li>Frontend</li>
         <li>Backend</li>
         <li>Design</li>
         <li>Data Science</li>
     </ul>
+    </div>
+</div>
 
 </body>
 
