--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Dashboard - Real World Assignment</title>
-    <style>
+    <!-- <style>
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
@@ -25,44 +25,57 @@
         li {
             margin-bottom: 10px;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
-    <h1 class="dashboard-title">Dashboard Overview</h1>
+    <div class="section" id="section1">
+        <h1 class="dashboard-title">Dashboard Overview</h1>
 
-    <p>
-        A dashboard is a centralized web page designed to provide users with a comprehensive and visual overview of key
-        information, data, and metrics. It serves as a hub for monitoring and analyzing various aspects of a system,
-        process, or organization.
-    </p>
+        <p>
+            A dashboard is a centralized web page designed to provide users with a comprehensive and visual overview of
+            key
+            information, data, and metrics. It serves as a hub for monitoring and analyzing various aspects of a system,
+            process, or organization.
+        </p>
 
-    <p>
-        The purpose of the dashboard is to offer a quick and accessible way for users to understand the current state,
-        performance, and trends in real-time or over specific periods. Dashboards often incorporate charts, graphs,
-        tables, and other visual elements to present data in a digestible format.
-    </p>
+        <p>
+            The purpose of the dashboard is to offer a quick and accessible way for users to understand the current
+            state,
+            performance, and trends in real-time or over specific periods. Dashboards often incorporate charts, graphs,
+            tables, and other visual elements to present data in a digestible format.
+        </p>
 
-    <p>
-        Users can utilize dashboards for data-driven decision-making, monitoring key performance indicators (KPIs), and
-        gaining insights into the overall status of a project, business, or any relevant domain. The information
-        displayed on the dashboard is typically customizable, allowing users to focus on the metrics that matter most to
-        them.
-    </p>
+        <p>
+            Users can utilize dashboards for data-driven decision-making, monitoring key performance indicators (KPIs),
+            and
+            gaining insights into the overall status of a project, business, or any relevant domain. The information
+            displayed on the dashboard is typically customizable, allowing users to focus on the metrics that matter
+            most to
+            them.
+        </p>
 
-    <p>
-        In summary, a dashboard provides a centralized and visually intuitive platform for users to stay informed, make
-        informed decisions, and efficiently monitor and manage various aspects of their activities.
-    </p>
+        <p>
+            In summary, a dashboard provides a centralized and visually intuitive platform for users to stay informed,
+            make
+            informed decisions, and efficiently monitor and manage various aspects of their activities.
+        </p>
 
-    <ul class="dashboard-sections">
-        <li><strong>Recent Activities:</strong> Displays a list of recent actions or events that have occurred within
-            the system.</li>
-        <li><strong>Statistics:</strong> Provides key statistical information and metrics for quick analysis and
-            understanding of performance.</li>
-        <li><strong>Upcoming Events:</strong> Highlights events or activities scheduled to occur in the near future.
-        </li>
-    </ul>
+    </div>
+    <div class="section" id="section2">
+        <ul class="dashboard-sections">
+            <div id="section3">
+                <li ><strong>Recent Activities:</strong> Displays a list of recent actions or events that have occurred
+                    within
+                    the system.</li>
+                <li><strong>Statistics:</strong> Provides key statistical information and metrics for quick analysis and
+                    understanding of performance.</li>
+                <li><strong>Upcoming Events:</strong> Highlights events or activities scheduled to occur in the near
+                    future.
+                </li>
+            </div>
+        </ul>
+    </div>
 </body>
 
 </html>
