--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 </head>
 
 <body>
-    <h1>Welcome to the Real World Assignment</h1>
-    <p>
+    <h2 style="font-size: 24px;">Welcome to the Real World Assignment</h2>
+    <p style="font-size: 16px; color: #333;">
         Discover the essentials of web development and design. Start your journey with this practical assignment.
     </p>
+    <div style="font-size: 18px; color: green; background-color: #f0f0f0; padding: 10px;">
     <p>
-        <a href="profile.html" style="text-decoration: none; color: #333333;">Profile</a>&nbsp;&nbsp;
-        <a href="dashboard.html" style="text-decoration: none; color: #333;" target="_blank">Dashboard</a>&nbsp;&nbsp;
-        <a href="categories.html" style="text-decoration: none; color: #333;">Categories</a>
+        <a href="profile.html" style="text-decoration: none; color: red;">Profile</a>&nbsp;&nbsp;
+        <a href="dashboard.html" style="text-decoration: none; color: blue;" target="_blank">Dashboard</a>&nbsp;&nbsp;
+        <a href="categories.html" style="text-decoration: none; color: green;">Categories</a>
     </p>
+    </div>
 </body>
 
 </html>
